# spin-notes

./: .gitignore  Cargo.toml  README.md  spin.toml
client/: Cargo.toml  index.html
client/src/: crypto.rs  main.rs
derive-public-key/: Cargo.toml
derive-public-key/src/: main.rs
src/: lib.rs
