[package]
name = "notes"
authors = ["Joel Dice <joel.dice@gmail.com>"]
description = ""
version = "0.1.0"
edition = "2021"

[lib]
crate-type = [ "cdylib" ]

[dependencies]
anyhow = "1"
bytes = "1"
ed25519-dalek = "1.0.1"
hex = "0.4.3"
http = "0.2"
spin-sdk = { git = "https://github.com/fermyon/spin", tag = "v1.1.0" }
wit-bindgen-rust = { git = "https://github.com/bytecodealliance/wit-bindgen", rev = "cb871cfa1ee460b51eb1d144b175b9aab9c50aba" }

[workspace]
members = [ "derive-public-key" ]
