[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
aes-gcm-siv = "0.11.1"
anyhow = "1.0.70"
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
ed25519-dalek = "1.0.1"
futures = "0.3.28"
getrandom = { version = "0.2.9", features = ["js"] }
hex = "0.4.3"
js-sys = "0.3.61"
leptos = { version = "0.2.5", features = ["stable"] }
log = "0.4.17"
reqwasm = "0.5.0"
scrypt = { version = "0.11.0", default-features = false }
wasm-bindgen-futures = "0.4.34"
web-sys = "0.3.61"

[workspace]
